# fastapi-cloud-scaler

./: Dockerfile  README.md  baseline.py  env.py  grader.py  inference.py  main.py  models.py  openenv.yaml  pyproject.toml
